--- a/style.css
+++ b/style.css
@@ -34,6 +34,12 @@ th {
     position: relative;
 }
 
+.header-buttons {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+}
+
 td[contenteditable="true"] {
     background-color: #fff;
 }
